[gd_scene load_steps=10 format=2]

[ext_resource path="res://Script/Play.gd" type="Script" id=1]
[ext_resource path="res://Scene/BaseHud.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scene/BuildingGrid.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scene/Popup/PopUpBaseHud.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scene/Popup/PopUpFarm.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scene/Popup/PopUpFactory.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scene/Popup/PopUpMarketing.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scene/Popup/PopUpResearch.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scene/Popup/PopUpWarehouse.tscn" type="PackedScene" id=9]

[node name="Play" type="Node" index="0"]

script = ExtResource( 1 )

[node name="BaseHud" parent="." index="0" instance=ExtResource( 2 )]

[node name="BuildingGrid" parent="." index="1" instance=ExtResource( 3 )]

[node name="PopUpBaseHud" parent="." index="2" instance=ExtResource( 4 )]

visible = false

[node name="PopUpFarm" parent="." index="3" instance=ExtResource( 5 )]

visible = false

[node name="PopUpFactory" parent="." index="4" instance=ExtResource( 6 )]

visible = false

[node name="PopUpMarketing" parent="." index="5" instance=ExtResource( 7 )]

visible = false

[node name="PopUpResearch" parent="." index="6" instance=ExtResource( 8 )]

visible = false

[node name="PopUpWarehouse" parent="." index="7" instance=ExtResource( 9 )]

visible = false


